updated some content and moified Backgrounds

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="wrapper">
             <div class="parallax filter-gradient blue" data-color="blue">
                 <div class="parallax-background">
-                    <img class="parallax-background-image" src="assets/img/template/bg3.jpg">
+                    <img class="parallax-background-image" src="assets/img/template/bg1.jpg">
                 </div>
                 <div class="container">
                     <div class="row">
@@ -83,20 +83,22 @@
                         </div>
                         <div class="col-md-6 col-md-offset-1">
                             <div class="description">
-                                <h2>Awesome landing page.</h2>
+                                <h2>Buddy Deck, your virtul sports center.</h2>
                                 <br>
-                                <h5>Be amazed by the best looking bootstrap landing page on the web! Your new app deserves an amazing page to show all of its features. Clear visual, light colours and beautifully aligned elements - they all try to make the
-                                    users aware of your great app features!</h5>
+                                <h5>Find your sports facilities and matches happening nearby you. </h5>
+
                             </div>
+
                             <div class="buttons">
+                                <h5 style="color: aliceblue;    line-height: 1.4;
+                                font-weight: 400;
+                                text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+                                font-size: 18px;">Download the app and get started today</h5>
                                 <button class="btn btn-fill btn-neutral">
-                                <i class="fa fa-apple"></i> Appstore
+                                <i class="fa fa-android"></i> Playstore
                                 </button>
                                 <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-android"></i>
-                                </button>
-                                <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-windows"></i>
+                                <i class="fa fa-apple"></i>
                                 </button>
                             </div>
                         </div>
@@ -105,21 +107,10 @@
             </div>
             <div class="section section-gray section-clients">
                 <div class="container text-center">
-                    <h4 class="header-text">Friends in high places</h4>
+                    <h4 class="header-text">Find your Match</h4>
                     <p>
-                        Build customer confidence by listing your users! Anyone who has used your service and has been pleased with it should have a place here! From Fortune 500 to start-ups, all your app enthusiasts will be glad to be featured in this section. Moreover, users
-                        will feel confident seing someone vouching for your product!<br>
+                        Explore and find the sports facilities from cricket grounds to indoor courts in a range of cities across Tamilnadu. <br>
                     </p>
-                    <div class="logos">
-                        <ul class="list-unstyled">
-                            <li><img src="assets/img/logos/adobe.png" /></li>
-                            <li><img src="assets/img/logos/zendesk.png" /></li>
-                            <li><img src="assets/img/logos/ebay.png" /></i>
-                                <li><img src="assets/img/logos/evernote.png" /></li>
-                                <li><img src="assets/img/logos/airbnb.png" /></li>
-                                <li><img src="assets/img/logos/zappos.png" /></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
             <div class="section section-presentation">
@@ -127,11 +118,12 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="description">
-                                <h4 class="header-text">It's beautiful</h4>
-                                <p>And your app is also probably social, awesome, easy-to-use and vital to users. This is the place to enlist all the good things that your app has to share. Focus on the benefits that the uers will receive. Try to combine
-                                    imaginery with text and show meaningful printscreens from your app, that will make it clear what exactly the basic functions are. </p>
-                                <p>Try to make it very clear for the people browsing the page that this product will enrich their life and will make a nice addition to the homescreen.
-                                    <p>
+                                <h4 class="header-text">Buddy Deck Mobile App</h4>
+                                <p><i class="fa fa-check-circle"></i> View and Schedule upcoming matches. <br>
+                                    <i class="fa fa-check-circle"></i> Search Clubs and Academies around you <br>
+                                    <i class="fa fa-check-circle"></i> Find various sports events and tournaments happening around you<br>
+                                    <i class="fa fa-check-circle"></i> Engage your players within Academy with instant updates on the timings <br>
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
@@ -168,7 +160,7 @@
                             <p>
                                 With all the apps that users love! Make it easy for users to share, like, post and tweet their favourite things from the app. Be sure to let users know they continue to remain connected while using your app!
                             </p>
-                            <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
+                            <a href="#" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
                         </div>
                     </div>
                 </div>
@@ -180,11 +172,11 @@
                         <div class="col-md-4">
                             <div class="card card-blue">
                                 <div class="icon">
-                                    <i class="pe-7s-note2"></i>
+                                    <i class="pe-7s-wristwatch"></i>
                                 </div>
                                 <div class="text">
-                                    <h4>Online Customers Management</h4>
-                                    <p>All appointments sync with your Google calendar so your availability is always up to date. See your schedule at a glance from any device.</p>
+                                    <h4>Online Players Management</h4>
+                                    <p>All appointments and matches sync with your Google calendar so your availability is always up to date. See your schedule at a glance from any device.</p>
                                 </div>
                             </div>
                         </div>
@@ -194,7 +186,7 @@
                                     <i class="pe-7s-bell"></i>
                                 </div>
                                 <h4>Smart Notifications on hands</h4>
-                                <p>Automatic text and email reminders make sure customers always remember their upcoming appointments.</p>
+                                <p>Automatic text and email reminders make sure players always remember their upcoming events.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -202,9 +194,10 @@
                                 <div class="icon">
                                     <i class="pe-7s-graph1"></i>
                                 </div>
-                                <h4>Know your business better now</h4>
-                                <p>Take payments and run your business on the go, in your store and then see how it all adds up with analytics.</p>
+                                <h4>Know your Players better now</h4>
+                                <p>Keep track on your players and members with the dedicated analytics for the Owners.</p>
                             </div>
+
                         </div>
                     </div>
                 </div>
