--- a/index.html
+++ b/index.html
@@ -249,11 +249,6 @@
                     <div class="parallax-background">
                         <img class="parallax-background-image" src="assets/img/template/bg3.jpg" />
                     </div>
-                    <div class="info">
-                        <h1>Download this landing page for free!</h1>
-                        <p>Beautiful multipurpose bootstrap landing page.</p>
-                        <a href="http://www.creative-tim.com/product/awesome-landing-page" class="btn btn-neutral btn-lg btn-fill">DOWNLOAD</a>
-                    </div>
                 </div>
             </div>
             <footer class="footer">
@@ -294,7 +289,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        &copy; 2016 <a href="http://www.creative-tim.com">Creative Tim</a>, made with love
+                        &copy; 2021 <a href="#">Buddy Deck</a>, made with love
                     </div>
                 </div>
             </footer>
